--- a/index.html
+++ b/index.html
@@ -489,33 +489,33 @@
   
   <div class="mySlides fade">
     <div class="numbertext">1 / 5</div>
-    <img src="Imagenes\Diplomas\IngInformático.jpg" style="width:40%" alt="Ingeniero Informático Politécnico Colombiano Jaime Isaza Cadavid" >
+    <img src="IngInformático.jpg" style="width:40%" alt="Ingeniero Informático Politécnico Colombiano Jaime Isaza Cadavid" >
     <div class="text">Ingeniero Informático   <br> Politécnico JIC</div>
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">2 / 5</div>
-    <img src="Imagenes\Diplomas\DFortalecimientoEmpresarial.jpg" style="width:50%">
+    <img src="DFortalecimientoEmpresarial.jpg" style="width:50%">
     <div class="text">Diplomado Fortalecimiento <br>Empresarial | EAFIT</div>
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">3 / 5</div>
-    <img src="Imagenes\Diplomas\DScrumMaster.jpg" style="width:50%">
+    <img src="DScrumMaster.jpg" style="width:50%">
     <div class="text">Diplomado Scrum Master <br> EAFIT 
       </div>
   </div>
   
   <div class="mySlides fade">
       <div class="numbertext">4 / 5</div>
-      <img src="Imagenes\Diplomas\DSGSI.jpg" style="width:40%">
+      <img src="DSGSI.jpg" style="width:40%">
       <br>
       <div class="text">Diplomado Seguridad <br>De la Información | SGS</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">5 / 5</div>
-      <img src="Imagenes\Diplomas\DAuditorSGSI.jpg" style="width:40%">
+      <img src="DAuditorSGSI.jpg" style="width:40%">
       <br>
       <div class="text">Auditor Interno SGSI <br> ISO 27001:2013 <br> SGS</div>
     </div> 
