--- a/index.html
+++ b/index.html
@@ -551,9 +551,9 @@
   
   <div class="mySlides fade">
       <div class="numbertext">4 / 5</div>
-      <img src=DSGSI.jpg" style="width:40%">
+     <img src="DSGSI.jpg" style="width:50%">
       <br>
-      <div class="text">Diplomado Seguridad <br>De la Información | SGS</div>
+      <div class="text"><p>Diplomado Seguridad <br>De la Información | SGS</p></div>
     </div>
   
     <div class="mySlides fade">
