--- a/index.html
+++ b/index.html
@@ -232,8 +232,7 @@
 
 
                             <i class="fa fa-map-marker contactIcon" aria-hidden="true"></i>
-                            <button onclick="toggleMapa()">Medellín, Colombia(Mostrar/Ocultar Mapa)
-                            </button>
+                            <a href="#" onclick="toggleMapa()">Medellín, Colombia(Mostrar/Ocultar Mapa</a>
 
                             <div id="mapa" style="display: none;">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7932.367887568446!2d-75.6042382!3d6.2394709!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e46827504b899bf%3A0x8c671edbd00c3ee9!2s050023%2C%20Medell%C3%ADn%2C%20Antioquia!5e0!3m2!1ses-419!2sco!4v1715371809628!5m2!1ses-419!2sco"
