--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <ul class="social-links social-links--side">
 
                         <li>
-                            <a href="https://www.linkedin.com/in/carlosmaiorivera" class="social-link" target="_blank">
+                            <a href="https://www.linkedin.com/in//bi-aws-carlosmariorivera" class="social-link" target="_blank">
                                 <ion-icon class="link social-icon" name="logo-linkedin"></ion-icon>
                             </a>
                         </li>
@@ -188,103 +188,7 @@
         </section>
 
         <!-- SKILLS SECTION -->
-        <section class="section-skills padd-section" id="skills">
-            <div class="container">
-                <div class="container-md">
-                    <div class="heading-secondary--right">
-                        <h2 class="heading-secondary">
-                            <span> &lt;&frasl;&nbsp;</span>Mis habilidades
-                        </h2>
-                    </div>
-                    <div class="fullstack-skills">
 
-                        <div class="skills-group">
-                            <p class="skills-title">Frontend</p>
-                            <div class="skills-data-box">
-                                <ul class="skills-data-list">
-
-                                    <li class="skills-name">
-                                        <ion-icon class="skills-icon" name="checkmark-circle-outline"></ion-icon>
-                                        <p>HTML</p>
-                                    </li>
-
-                                    <li class="skills-name">
-                                        <ion-icon class="skills-icon" name="checkmark-circle-outline"></ion-icon>
-                                        <p>CSS</p>
-                                    </li>
-
-                                    <li class="skills-name">
-                                        <ion-icon class="skills-icon" name="checkmark-circle-outline"></ion-icon>
-                                        <p>Javascript</p>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-
-                        <div class="skills-group">
-                            <p class="skills-title">Backend</p>
-                            <div class="skills-data-box">
-                                <ul class="skills-data-list">
-                                    <li class="skills-name">
-                                        <ion-icon class="skills-icon" name="checkmark-circle-outline"></ion-icon>
-                                        <p>Python</p>
-                                    </li>
-                                    <li class="skills-name">
-                                        <ion-icon class="skills-icon" name="checkmark-circle-outline"></ion-icon>
-                                        <p>MySQL</p>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <!-- Other skills -->
-                    <div class="flex-col other-skills-box">
-                        <p class="skills-title">Other skills</p>
-                        <ul class="flex-col other-skills-list text">
-
-                            <li class="other-skills-item">
-                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-                                <p>Extración de datos con Web Scraping</p>
-                            </li>
-
-                            <li class="other-skills-item">
-                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-                                <p>Administración y creación de bases de datos SQL</p>
-                            </li>
-
-                            <li class="other-skills-item">
-                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-                                <p>Normalización de datos, optimización de consultas
-                                </p>
-                            </li>
-
-                            <li class="other-skills-item">
-                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-                                <p>Capacidades básicas de Data Scientist y Data Analyst</p>
-                            </li>
-
-                            <li class="other-skills-item">
-                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-                                <p>Principios de diseño de interficies de usuario y experiencia de uso</p>
-                            </li>
-
-                            <li class="other-skills-item">
-                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-                                <p>Fundamentos del diseño y color</p>
-                            </li>
-
-                            <li class="other-skills-item">
-                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-                                <p>Habilidades de diseño con Figma</p>
-                            </li>
-
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
 
         <!-- RECENT WORKS -->
     
