--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,16 +37,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="CSS/general.css">
-    <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="stylesheet" href="CSS/queries.css">
-    <link rel="stylesheet" href="CSS/cookie_consent.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/queries.css">
+    <link rel="stylesheet" href="css/cookie_consent.css">
 
     <!-- JavaScript -->
     <script src="JavaScript/index.js"></script>
 
 
 </head>
-
 <body>
 
     <header class="section-header">
