--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <header class="section-header">
         <nav class="nav flex-row">
 
-            <a href="index" class="logo-link"><img src="img/logo.jpg" alt="carlosmaiorivera Logo" class="logo" /></a>
+            <a href="img/logo.jpg" class="logo-link"><img src="img/logo.jpg" alt="carlosmaiorivera Logo" class="logo" /></a>
 
 
 
