--- a/index.html
+++ b/index.html
@@ -37,21 +37,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="CSS/general.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/queries.css">
-    <link rel="stylesheet" href="css/cookie_consent.css">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/queries.css">
+    <link rel="stylesheet" href="CSS/cookie_consent.css">
 
     <!-- JavaScript -->
     <script src="JavaScript/index.js"></script>
 
 
 </head>
+
 <body>
 
     <header class="section-header">
         <nav class="nav flex-row">
 
-            <a href="img/logo.jpg" class="logo-link"><img src="img/logo.jpg" alt="carlosmaiorivera Logo" class="logo" /></a>
+            <a href="index" class="logo-link"><img src="img/logo.jpg" alt="carlosmaiorivera Logo" class="logo" /></a>
 
 
 
@@ -101,7 +102,7 @@
                     <ul class="social-links social-links--side">
 
                         <li>
-                            <a href="https://www.linkedin.com/in//bi-aws-carlosmariorivera" class="social-link" target="_blank">
+                            <a href="https://www.linkedin.com/in/bi-aws-carlosmariorivera" class="social-link" target="_blank">
                                 <ion-icon class="link social-icon" name="logo-linkedin"></ion-icon>
                             </a>
                         </li>
@@ -191,10 +192,221 @@
         </section>
 
         <!-- SKILLS SECTION -->
+        <section class="section-skills padd-section" id="skills">
+            <div class="container">
+                <div class="container-md">
+                    <div class="heading-secondary--right">
+                        <h2 class="heading-secondary">
+                            <span> &lt;&frasl;&nbsp;</span>Mis habilidades
+                        </h2>
+                    </div>
+                    <div class="fullstack-skills">
 
+                        <div class="skills-group">
+                            <p class="skills-title">Frontend</p>
+                            <div class="skills-data-box">
+                                <ul class="skills-data-list">
+
+                                    <li class="skills-name">
+                                        <ion-icon class="skills-icon" name="checkmark-circle-outline"></ion-icon>
+                                        <p>HTML</p>
+                                    </li>
+
+                                    <li class="skills-name">
+                                        <ion-icon class="skills-icon" name="checkmark-circle-outline"></ion-icon>
+                                        <p>CSS</p>
+                                    </li>
+
+                                    <li class="skills-name">
+                                        <ion-icon class="skills-icon" name="checkmark-circle-outline"></ion-icon>
+                                        <p>Javascript</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="skills-group">
+                            <p class="skills-title">Backend</p>
+                            <div class="skills-data-box">
+                                <ul class="skills-data-list">
+                                    <li class="skills-name">
+                                        <ion-icon class="skills-icon" name="checkmark-circle-outline"></ion-icon>
+                                        <p>Python</p>
+                                    </li>
+                                    <li class="skills-name">
+                                        <ion-icon class="skills-icon" name="checkmark-circle-outline"></ion-icon>
+                                        <p>MySQL</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- Other skills -->
+<!--                     <div class="flex-col other-skills-box">
+                        <p class="skills-title">Other skills</p>
+                        <ul class="flex-col other-skills-list text">
+
+                            <li class="other-skills-item">
+                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+                                <p>Extración de datos con Web Scraping</p>
+                            </li>
+
+                            <li class="other-skills-item">
+                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+                                <p>Administración y creación de bases de datos SQL</p>
+                            </li>
+
+                            <li class="other-skills-item">
+                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+                                <p>Normalización de datos, optimización de consultas
+                                </p>
+                            </li>
+
+                            <li class="other-skills-item">
+                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+                                <p>Capacidades básicas de Data Scientist y Data Analyst</p>
+                            </li>
+
+                            <li class="other-skills-item">
+                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+                                <p>Principios de diseño de interficies de usuario y experiencia de uso</p>
+                            </li>
+
+                            <li class="other-skills-item">
+                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+                                <p>Fundamentos del diseño y color</p>
+                            </li>
+
+                            <li class="other-skills-item">
+                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+                                <p>Habilidades de diseño con Figma</p>
+                            </li>
+
+                        </ul>
+                    </div> -->
+                </div>
+            </div>
+        </section>
 
         <!-- RECENT WORKS -->
-    
+        <section class="section-works padd-section" id="works">
+            <div class="container">
+                <div class="container-md">
+                    <div class="heading-secondary--left">
+                        <h2 class="heading-secondary">
+                            Mi Curriculum
+                            <span>&nbsp;&frasl;&gt;</span>
+                        </h2>
+                    </div>
+                    <div class="works-container">
+
+<!--                         <div class="work">
+                            <a href="https://play.google.com/store/apps/details?id=com.webserveis.app.lightprice"
+                                target="_blank">
+                                <img src="img/projects/precio_luz_app.webp" alt="Precio de la luz" class="work-img" />
+                            </a>
+                            <div class="work-text-container text">
+                                <p class="work-title"></p>
+                                <p class="work-description">
+                    
+                                </p>
+                                <ul class="work-tags-list">
+
+                                <li class="work-tag-item">Kotlin</li -->>
+
+                    <!--               <li class="work-tag-item">Android Vi -->
+                    <!--               </li> -->
+
+                    <!--               <li class="work-tag-item">PHP Slim</ -->
+
+                    <!--               <li class="work-tag-item">MySQL</li> -->
+                    <!-- 
+                                </ul>
+                            </div>
+                            <div class="work-links">
+                                <ul class="work-links-list">
+
+                                    <li class="work-links-item">
+                                        <a href="https://play.google.com/store/apps/details?id=com.webserveis.app.lightprice"
+                                            class="link work-link" target="_blank">
+                                            <ion-icon name="open-outline"></ion-icon>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div> -->
+
+                        <!--     <div class="work">
+                            <a href="https://apps.apple.com/us/app/time-kit/id6477182932" target="_blank">
+                                <img src="img/projects/timekit_app.png" alt="Time Kit" class="work-img" />
+                            </a>
+                            <div class="work-text-container text">
+                                <p class="work-title">Time Kit</p>
+                                <p class="work-description">
+                                    Time Kit es una aplicación que te permite convertir los horarios de tus eventos
+                                    streaming a las zonas horarias de tu audiencia. Así, todos podrán verlos en su
+                                    franja horaria.
+                                </p>
+                                <ul class="work-tags-list">
+
+                                    <li class="work-tag-item">Swift</li>
+
+                                    <li class="work-tag-item">SwiftUI</li>
+
+                                    <li class="work-tag-item">SwifData</li>
+
+                                </ul>
+                            </div>
+                            <div class="work-links">
+                                <ul class="work-links-list">
+
+                                    <li class="work-links-item">
+                                        <a href="https://apps.apple.com/us/app/time-kit/id6477182932"
+                                            class="link work-link" target="_blank">
+                                            <ion-icon name="open-outline"></ion-icon>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div> -->
+
+
+
+                    </div>
+                    <div class="see-more-btn-box">
+                        <a href="HTML/Aboutpage/about.html"
+                            class="link btn btn-outline" target="_blank">Ver
+                            mucho más</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- CONTACT SECTION -->
+<!--         <section class="section-contact" id="contact">
+            <div class="container">
+                <div class="container-md">
+                    <div class="contact-container">
+                        <h2 class="heading-secondary">
+                            <span>&lt;&frasl;&nbsp;</span>
+
+                        </h2>
+                        <div class="contact-info-container">
+                            <p class="contact-title">carlosmaiorivera en la red
+                            </p>
+                            <p class="text">
+                                ¡Me puedes encontrar y seguir en varias plataformas en línea! Mi nombre de usuario en
+                                las redes es @carlosmaiorivera, donde comparto actualizaciones sobre mis proyectos y
+                                consejos y trucos para el desarrollo de aplicaciones para Android.
+                            </p>
+                        </div>
+                        <a href="https://dev4phones.wordpress.com/" class="link btn btn-full">Ver mi blog</a>
+                    </div>
+                </div>
+            </div>
+        </section> -->
     </main>
 
     <footer class="section-footer">
