--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <header class="section-header">
         <nav class="nav flex-row">
 
-            <a href="index" class="logo-link"><img src="img/logo.jpg" alt="carlosmaiorivera Logo" class="logo" /></a>
+            <img src="Img/logo.jpg" alt="carlosmaiorivera Logo" class="logo" />
 
 
 
@@ -184,7 +184,7 @@
 
                         </div>
                         <div class="about-box--img">
-                            <img src="img/logo.jpg" alt="Photo of carlosmaiorivera" class="about-img" />
+                            <img src="Img/logo.jpg" alt="Photo of carlosmaiorivera" class="about-img" />
                         </div>
                     </div>
                 </div>
