--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
                         </div>
                         <div class="about-box--img">
-                            <img src="img/logo.jpg" alt="Photo of carlosmaiorivera" class="about-img" />
+                            <img src="Img/logo.jpg" alt="Photo of carlosmaiorivera" class="about-img" />
                         </div>
                     </div>
                 </div>
