--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="CSS/general.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/queries.css">
-    <link rel="stylesheet" href="css/cookie_consent.css">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/queries.css">
+    <link rel="stylesheet" href="CSS/cookie_consent.css">
 
     <!-- JavaScript -->
     <script src="JavaScript/index.js"></script>
@@ -244,48 +244,7 @@
                     </div>
 
                     <!-- Other skills -->
-                    <div class="flex-col other-skills-box">
-                        <p class="skills-title">Other skills</p>
-                        <ul class="flex-col other-skills-list text">
-
-                            <li class="other-skills-item">
-                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-                                <p>Extración de datos con Web Scraping</p>
-                            </li>
-
-                            <li class="other-skills-item">
-                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-                                <p>Administración y creación de bases de datos SQL</p>
-                            </li>
-
-                            <li class="other-skills-item">
-                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-                                <p>Normalización de datos, optimización de consultas
-                                </p>
-                            </li>
-
-                            <li class="other-skills-item">
-                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-                                <p>Capacidades básicas de Data Scientist y Data Analyst</p>
-                            </li>
-
-                            <li class="other-skills-item">
-                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-                                <p>Principios de diseño de interficies de usuario y experiencia de uso</p>
-                            </li>
-
-                            <li class="other-skills-item">
-                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-                                <p>Fundamentos del diseño y color</p>
-                            </li>
-
-                            <li class="other-skills-item">
-                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-                                <p>Habilidades de diseño con Figma</p>
-                            </li>
-
-                        </ul>
-                    </div>
+                   
                 </div>
             </div>
         </section>
