--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     <header class="section-header">
         <nav class="nav flex-row">
 
-            <img src="Img/logo.jpg" alt="carlosmaiorivera Logo" class="logo" />
+            <a href="Img/logo.jpg" class="logo-link"><img src="Img/logo.jpg" alt="carlosmaiorivera Logo"
+                    class="logo" /></a>
 
 
 
@@ -64,7 +65,7 @@
 
                     <li>
                         <a href="#about" class="link main-nav-link">Acerca
-                            de mi <span>&nbsp;&frasl;&gt;</span></a>
+                            de mi </a>
                     </li>
 
                     <li>
@@ -73,7 +74,7 @@
                     </li>
 
                     <li>
-                        <a href="#works" class="link main-nav-link">Curriculum
+                        <a href="HTML/curriculum.html" class="link main-nav-link">Curriculum
                             <span>&nbsp;&frasl;&gt;</span></a>
                     </li>
 
@@ -108,7 +109,8 @@
                         </li>
 
                         <li>
-                            <a href="https://github.com/carlosmriveraz/CurriculumHTML_CArlosRivera" class="social-link" target="_blank">
+                            <a href="https://github.com/carlosmriveraz/CurriculumHTML_CArlosRivera" class="social-link"
+                                target="_blank">
                                 <ion-icon class="link social-icon" name="logo-github"></ion-icon>
                             </a>
                         </li>
@@ -244,14 +246,55 @@
                     </div>
 
                     <!-- Other skills -->
-                   
+                    <!--                     <div class="flex-col other-skills-box">
+                        <p class="skills-title">Other skills</p>
+                        <ul class="flex-col other-skills-list text">
+
+                            <li class="other-skills-item">
+                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+                                <p>Extración de datos con Web Scraping</p>
+                            </li>
+
+                            <li class="other-skills-item">
+                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+                                <p>Administración y creación de bases de datos SQL</p>
+                            </li>
+
+                            <li class="other-skills-item">
+                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+                                <p>Normalización de datos, optimización de consultas
+                                </p>
+                            </li>
+
+                            <li class="other-skills-item">
+                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+                                <p>Capacidades básicas de Data Scientist y Data Analyst</p>
+                            </li>
+
+                            <li class="other-skills-item">
+                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+                                <p>Principios de diseño de interficies de usuario y experiencia de uso</p>
+                            </li>
+
+                            <li class="other-skills-item">
+                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+                                <p>Fundamentos del diseño y color</p>
+                            </li>
+
+                            <li class="other-skills-item">
+                                <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
+                                <p>Habilidades de diseño con Figma</p>
+                            </li>
+
+                        </ul>
+                    </div> -->
                 </div>
             </div>
         </section>
 
         <!-- RECENT WORKS -->
         <section class="section-works padd-section" id="works">
-            <div class="container">
+            <!--  <div class="container">
                 <div class="container-md">
                     <div class="heading-secondary--left">
                         <h2 class="heading-secondary">
@@ -261,12 +304,11 @@
                     </div>
                     <div class="works-container">
 
-<!--                         <div class="work">
-                            <a href="https://play.google.com/store/apps/details?id=com.webserveis.app.lightprice"
-                                target="_blank">
-                                <img src="img/projects/precio_luz_app.webp" alt="Precio de la luz" class="work-img" />
+                        <div class="work">
+                            <a href="HTML/curriculum.html" target="_blank">
+
                             </a>
-                            <div class="work-text-container text">
+                            <!--                             <div class="work-text-container text">
                                 <p class="work-title"></p>
                                 <p class="work-description">
                     
@@ -275,13 +317,13 @@
 
                                 <li class="work-tag-item">Kotlin</li -->>
 
-                    <!--               <li class="work-tag-item">Android Vi -->ew
-                    <!--               </li> -->
+            <!--               <li class="work-tag-item">Android Vi -->
+            <!--               </li> -->
 
-                    <!--               <li class="work-tag-item">PHP Slim</ -->li>
+            <!--               <li class="work-tag-item">PHP Slim</ -->
 
-                    <!--               <li class="work-tag-item">MySQL</li> -->
-                    <!-- 
+            <!--               <li class="work-tag-item">MySQL</li> -->
+            <!-- 
                                 </ul>
                             </div>
                             <div class="work-links">
@@ -297,7 +339,7 @@
                             </div>
                         </div> -->
 
-                        <!--     <div class="work">
+            <!--     <div class="work">
                             <a href="https://apps.apple.com/us/app/time-kit/id6477182932" target="_blank">
                                 <img src="img/projects/timekit_app.png" alt="Time Kit" class="work-img" />
                             </a>
@@ -333,18 +375,17 @@
 
 
 
-                    </div>
-                    <div class="see-more-btn-box">
-                        <a href="https://play.google.com/store/apps/dev?id=8979891956711794454"
-                            class="link btn btn-outline" target="_blank">Ver
-                            mucho más</a>
-                    </div>
-                </div>
+
+            <div class="see-more-btn-box">
+                <a href="HTML/Aboutpage/about.html" class="link btn btn-outline" target="_blank">Ver
+                    mucho más</a>
             </div>
+            <!--         </div>
+        </div> -->
         </section>
 
         <!-- CONTACT SECTION -->
-        <section class="section-contact" id="contact">
+        <!--         <section class="section-contact" id="contact">
             <div class="container">
                 <div class="container-md">
                     <div class="contact-container">
@@ -365,7 +406,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <footer class="section-footer">
@@ -375,8 +416,7 @@
                     <ul class="social-links">
 
                         <li>
-                            <a href="https://www.linkedin.com/in/bi-aws-carlosmariorivera" 
-                                target="_blank">
+                            <a href="https://www.linkedin.com/in/bi-aws-carlosmariorivera" target="_blank">
                                 <ion-icon class="link social-icon" name="logo-linkedin"></ion-icon>
                             </a>
                         </li>
